--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "android:open": "open -a /Applications/Android\\ Studio.app",
+    "ios:open": "xed -b ios",
+    "android:clean": "cd android && ./gradlew clean",
+    "ios:clean": "cd ios && xcodebuild clean",
+    "android:build": "cd android &&./gradlew assembleRelease",
+    "ios:pod": "cd ios && pod install",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
@@ -42,7 +48,6 @@
     "react-native-ble-plx": "^3.1.2",
     "react-native-bluetooth-state-manager": "^2.0.2",
     "react-native-bootsplash": "^6.3.8",
-    "react-native-calendars": "^1.1312.1",
     "react-native-check-box": "^2.1.7",
     "react-native-compressor": "^1.11.0",
     "react-native-device-info": "^14.0.4",
@@ -61,11 +66,9 @@
     "react-native-screens": "~4.10.0",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-share": "^12.0.11",
-    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "15.12.0",
     "react-native-svg-transformer": "^1.5.1",
     "react-native-tab-view": "^4.1.0",
-    "react-native-timeline-flatlist": "^0.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-vision-camera": "^4.6.4",
     "react-native-webview": "13.13.5",
